--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "editorconfig": "^0.15.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.5",
     "express-winston": "^4.0.5",
@@ -36,6 +37,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "nodemon": "^2.0.7"
   }
 }
