--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Valeria-panda/movies-explorer-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^13.0.4",
@@ -31,6 +32,7 @@
     "express-winston": "^4.0.5",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "validator": "^13.5.2",
