--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "fix-js": "eslint-auto-fix"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,9 @@
   },
   "devDependencies": {
     "eslint": "^7.19.0",
+    "eslint-auto-fix": "^1.0.3",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
   }
 }
