--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends" : "airbnb-base",
   "rules": {
     "no-console": "off",
+    "no-unused-vars":"off",
     "no-underscore-dangle": [
       "error",
       {
